test/valid/AbstractMethodsCanOverride/Super.plume
/**
 * The name says it all
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: Super.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
abstract class Super extends Object is

  abstract method override toString : () -> String
