test/invalid/AbstractMethodsCannotOverride/AbstractMethodsCannotOverride.plume
/**
 * The name says it all
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: AbstractMethodsCannotOverride.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class AbstractMethodsCannotOverride extends Object is

  abstract method override toString : () -> String
